2005-12-13  Per Bothner  <per@bothner.com>

	* XQResolveNames.java (BASE_URI_BUILTIN): New constant.
	(<init>): Define fn:base-uri as builtin using BASE_URI_BUILTIN.
	(walkApplyExp): Handle BASE_URI_BUILTIN.
	* XQuery.java (initXQuery): Remove old defnition of fn:base-uri.

2005-12-11  Per Bothner  <per@bothner.com>

	* XQuery.java (evalToFocusProc): Update evalModule call.

2005-11-28  Per Bothner  <per@bothner.com>

	* XQParser.java (parse):  Set class name from module namespace.

2005-11-03  Per Bothner  <per@bothner.com>

	* XQuery.java (XHTML_NAMESPACE): New constant.
	* XQParser.java (pushStandardNamespaces): Bind html to XHTML_NAMESPACE.

2005-10-27  Per Bothner  <per@bothner.com>

	* XQParser.java (tokenString): Handle STRING_TOKEN.

2005-10-18  Per Bothner  <per@bothner.com>

	* XQParser.java (parseMaybePrimaryExpr): Catch DFloNum
	parsing exception.

2005-10-06  Per Bothner  <per@bothner.com>

	* XQParser.java (parseMaybePrimaryExpr): For text and comment
	parse an ExprSequence, yielding a single argument.
	* XQParser.java (parseContent): Various tweaks to fix/improve
	handing of text content, including fixing whitespace insertion.

	* XQParser.java (parse): Set line number for 'external' variable.

	* XQParser.java (parseFLWRInner): Fix thinko in growing array.

	* XQParser.java (parseTypeSwitch): Number of parameters to LambdaExp
	for a case is 1, not 0.

	* XQResolveNames.java (push): If namespaceResolve returned null,
	skip this Declaration.

2005-09-26  Per Bothner  <per@bothner.com>

	* XQParser.java (parseFLWRExpression): Get next token after comma
	separating 'order by' specifiers.

2005-09-25  Per Bothner  <per@bothner.com>

	* XQParser.java: Re-do FLWOR parsing to handle 'order by'.
	(parseFLWRInner): New method.
	(parseFLWRExpression): Use parseFLWRInner.

	* XQParser.java (parseSortExpr): Remove obsolete method.
	(parseExp): Call parseExprSingle instead of parseSortExpr.

	* XQParser.java (parse): Move error for duplicate declare collation.
