@@ -1,3 +1,7 @@
+2006-01-05  Per Bothner  <per@bothner.com>
+
+	* XQuery.java (typeMap): Add binding for anyURI.
+
 2005-12-13  Per Bothner  <per@bothner.com>
 
 	* XQResolveNames.java (BASE_URI_BUILTIN): New constant.
